--- a/Weather Forecast/View/Base.lproj/Main.storyboard
+++ b/Weather Forecast/View/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -90,7 +91,13 @@
                             <constraint firstItem="WTm-H3-uaH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="scR-aa-KY3"/>
                             <constraint firstItem="gcd-nA-eAA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="slS-ym-Dm6"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="Svp-tN-Ern"/>
                     </view>
+                    <connections>
+                        <outlet property="cityLabel" destination="Lgw-t9-ZFz" id="zUo-OQ-FjP"/>
+                        <outlet property="tempLabel" destination="2HN-ro-JgS" id="QrK-8Y-TW0"/>
+                        <outlet property="weatherImage" destination="IdB-Jo-JiW" id="aum-aX-IKT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -159,6 +166,7 @@
                             <constraint firstItem="XDh-0J-Bvo" firstAttribute="trailing" secondItem="7ka-JG-UXd" secondAttribute="trailing" id="gfB-kC-xZU"/>
                             <constraint firstItem="BQ8-Yu-Wen" firstAttribute="top" secondItem="7ka-JG-UXd" secondAttribute="top" id="iql-Rk-tJP"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="24U-Jp-MX4"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sg6-vg-lYR" userLabel="First Responder" sceneMemberID="firstResponder"/>
