--- a/Weather Forecast/View/Base.lproj/Main.storyboard
+++ b/Weather Forecast/View/Base.lproj/Main.storyboard
@@ -36,24 +36,24 @@
                                     <color key="titleShadowColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Ula-6o-yEy" kind="presentation" identifier="changeCityName" id="sh4-zP-5yx"/>
+                                    <segue destination="Ula-6o-yEy" kind="show" identifier="changeCityName" id="sh4-zP-5yx"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTm-H3-uaH" userLabel="Container View">
                                 <rect key="frame" x="0.0" y="93" width="320" height="455"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2HN-ro-JgS">
-                                        <rect key="frame" x="136" y="0.0" width="168" height="127"/>
+                                        <rect key="frame" x="124" y="0.0" width="180" height="110"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="127" id="oWx-G3-wjP"/>
-                                            <constraint firstAttribute="width" constant="168" id="pea-vL-ljN"/>
+                                            <constraint firstAttribute="height" constant="110" id="oWx-G3-wjP"/>
+                                            <constraint firstAttribute="width" constant="180" id="pea-vL-ljN"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="100"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="85"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IdB-Jo-JiW">
-                                        <rect key="frame" x="16" y="132" width="288" height="231"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shower3" translatesAutoresizingMaskIntoConstraints="NO" id="IdB-Jo-JiW">
+                                        <rect key="frame" x="16" y="115" width="288" height="248"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lgw-t9-ZFz">
                                         <rect key="frame" x="16" y="365" width="288" height="90"/>
@@ -187,6 +187,7 @@
         <image name="background" width="500" height="755"/>
         <image name="backgroundimage" width="916" height="1665"/>
         <image name="left" width="32" height="32"/>
+        <image name="shower3" width="64" height="64"/>
         <image name="switch" width="64" height="64"/>
     </resources>
 </document>
