--- a/Weather Forecast/View/Base.lproj/Main.storyboard
+++ b/Weather Forecast/View/Base.lproj/Main.storyboard
@@ -23,11 +23,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="flz-YM-ViJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundnew" translatesAutoresizingMaskIntoConstraints="NO" id="flz-YM-ViJ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcd-nA-eAA">
-                                <rect key="frame" x="254" y="20" width="50" height="50"/>
+                                <rect key="frame" x="254" y="35" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="eg2-Nm-8fp"/>
                                     <constraint firstAttribute="width" constant="50" id="zxB-zx-DbH"/>
@@ -40,7 +40,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTm-H3-uaH" userLabel="Container View">
-                                <rect key="frame" x="0.0" y="93" width="320" height="455"/>
+                                <rect key="frame" x="0.0" y="105" width="320" height="443"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2HN-ro-JgS">
                                         <rect key="frame" x="124" y="0.0" width="180" height="110"/>
@@ -53,10 +53,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shower3" translatesAutoresizingMaskIntoConstraints="NO" id="IdB-Jo-JiW">
-                                        <rect key="frame" x="16" y="115" width="288" height="248"/>
+                                        <rect key="frame" x="16" y="115" width="288" height="236"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lgw-t9-ZFz">
-                                        <rect key="frame" x="16" y="365" width="288" height="90"/>
+                                        <rect key="frame" x="20" y="353" width="284" height="90"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="90" id="g9o-MB-sAB"/>
                                         </constraints>
@@ -69,10 +69,9 @@
                                     <constraint firstItem="2HN-ro-JgS" firstAttribute="top" secondItem="WTm-H3-uaH" secondAttribute="top" id="1Ww-Zy-aWk"/>
                                     <constraint firstAttribute="trailing" secondItem="2HN-ro-JgS" secondAttribute="trailing" constant="16" id="A7c-ja-Pmn"/>
                                     <constraint firstItem="Lgw-t9-ZFz" firstAttribute="top" secondItem="IdB-Jo-JiW" secondAttribute="bottom" constant="2" id="EAP-fE-MG3"/>
-                                    <constraint firstAttribute="height" constant="455" id="SY8-MT-odQ"/>
                                     <constraint firstItem="IdB-Jo-JiW" firstAttribute="leading" secondItem="WTm-H3-uaH" secondAttribute="leading" constant="16" id="egB-Ly-WAk"/>
                                     <constraint firstAttribute="bottom" secondItem="Lgw-t9-ZFz" secondAttribute="bottom" id="ei7-Hd-QER"/>
-                                    <constraint firstItem="Lgw-t9-ZFz" firstAttribute="leading" secondItem="WTm-H3-uaH" secondAttribute="leading" constant="16" id="r6m-PU-rvv"/>
+                                    <constraint firstItem="Lgw-t9-ZFz" firstAttribute="leading" secondItem="WTm-H3-uaH" secondAttribute="leading" constant="20" id="r6m-PU-rvv"/>
                                     <constraint firstAttribute="trailing" secondItem="IdB-Jo-JiW" secondAttribute="trailing" constant="16" id="ut5-k4-bNT"/>
                                     <constraint firstAttribute="trailing" secondItem="Lgw-t9-ZFz" secondAttribute="trailing" constant="16" id="v8L-hb-3Ei"/>
                                     <constraint firstItem="IdB-Jo-JiW" firstAttribute="top" secondItem="2HN-ro-JgS" secondAttribute="bottom" constant="5" id="yWv-SV-W9C"/>
@@ -88,8 +87,9 @@
                             <constraint firstAttribute="bottom" secondItem="flz-YM-ViJ" secondAttribute="bottom" id="fiR-Ht-OKn"/>
                             <constraint firstAttribute="trailing" secondItem="gcd-nA-eAA" secondAttribute="trailing" constant="16" id="geG-Es-38W"/>
                             <constraint firstAttribute="trailing" secondItem="flz-YM-ViJ" secondAttribute="trailing" id="mlT-Ee-sQx"/>
+                            <constraint firstItem="WTm-H3-uaH" firstAttribute="top" secondItem="gcd-nA-eAA" secondAttribute="bottom" constant="20" id="rP6-34-ew3"/>
                             <constraint firstItem="WTm-H3-uaH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="scR-aa-KY3"/>
-                            <constraint firstItem="gcd-nA-eAA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="slS-ym-Dm6"/>
+                            <constraint firstItem="gcd-nA-eAA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="35" id="slS-ym-Dm6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Svp-tN-Ern"/>
                     </view>
@@ -111,14 +111,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundimage" translatesAutoresizingMaskIntoConstraints="NO" id="BQ8-Yu-Wen">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundnew" translatesAutoresizingMaskIntoConstraints="NO" id="BQ8-Yu-Wen">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDh-0J-Bvo" userLabel="Container View">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="221"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="As8-FP-W7a">
-                                        <rect key="frame" x="16" y="22" width="40" height="40"/>
+                                        <rect key="frame" x="16" y="35" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="W4i-sF-ck3"/>
                                             <constraint firstAttribute="height" constant="40" id="cIq-NR-Lb5"/>
@@ -152,7 +152,7 @@
                                     <constraint firstItem="Uh0-ei-VXO" firstAttribute="leading" secondItem="XDh-0J-Bvo" secondAttribute="leading" constant="76" id="6o3-eJ-HzF"/>
                                     <constraint firstAttribute="trailing" secondItem="ls2-ba-lCx" secondAttribute="trailing" constant="50" id="DdD-kx-YWi"/>
                                     <constraint firstItem="ls2-ba-lCx" firstAttribute="centerX" secondItem="XDh-0J-Bvo" secondAttribute="centerX" id="KUv-8n-bOz"/>
-                                    <constraint firstItem="As8-FP-W7a" firstAttribute="top" secondItem="XDh-0J-Bvo" secondAttribute="top" constant="22" id="MnL-yU-9mg"/>
+                                    <constraint firstItem="As8-FP-W7a" firstAttribute="top" secondItem="XDh-0J-Bvo" secondAttribute="top" constant="35" id="MnL-yU-9mg"/>
                                     <constraint firstAttribute="trailing" secondItem="Uh0-ei-VXO" secondAttribute="trailing" constant="76" id="Su7-QW-AFc"/>
                                     <constraint firstAttribute="bottom" secondItem="Uh0-ei-VXO" secondAttribute="bottom" id="UWS-kQ-1fA"/>
                                     <constraint firstAttribute="height" constant="221" id="Wg1-hj-5Yd"/>
@@ -184,8 +184,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="500" height="755"/>
-        <image name="backgroundimage" width="916" height="1665"/>
+        <image name="backgroundnew" width="3874" height="4842"/>
         <image name="left" width="32" height="32"/>
         <image name="shower3" width="64" height="64"/>
         <image name="switch" width="64" height="64"/>
